--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -1,6 +1,5 @@
 <nav>
     <ul>
-        <li><a href="/posts">Todos los Posts</a></li>
-        <li><a href="/posts/create">Crear un Post</a></li>
+        <li><a href="/posts">All Posts</a></li>
     </ul>
 </nav>
