--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,20 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{pageTitle}}</title>
+    <title>Blog</title>
 </head>
 <body>
-    <header>
-        {{> navigation}}
-    </header>
-    
-    <main>
-        {{{body}}}
-    </main>
-
-    <footer>
-        
-    </footer>
+    {{> navigation}}
+    {{{body}}}
 </body>
 </html>
