--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -1,5 +1,9 @@
 <nav>
-    <ul>
-        <li><a href="/posts">All Posts</a></li>
-    </ul>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/posts">All posts</a></li>
+    <li><a href="/posts/create">New post</a></li>
+
+  </ul>
+
 </nav>
